wip in the space invaders

--- a/space_invaders/style.css
+++ b/space_invaders/style.css
@@ -8,7 +8,7 @@ body {
 #game {
   position: relative;
   width: 600px;
-  height: 400px;
+  height: 600px;
   background: #111;
   margin: 0 auto;
   overflow: hidden;
@@ -38,24 +38,15 @@ body {
   background: yellow;
 }
 
-.enemy-bullet {
-  position: absolute;
-  width: 4px;
-  height: 10px;
-  background-color: red;
-}
-
-.shield-block {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: green;
-}
-
 .hidden {
   display: none;
 }
 
 #info {
   margin-top: 20px;
+}
+.ufo {
+  background: magenta;
+  width: 40px;
+  height: 20px;
 }
